# enounter-gen-rs

./: Cargo.toml  Discuss.txt  README.md  monsters.db
src/: lib.rs  main.rs
src/encounter/: mod.rs
src/logger/: mod.rs
src/monsters/: mod.rs
src/monsters/iter/: mod.rs
src/monsters/monster/: mod.rs
src/tasks/: gen.rs  mod.rs  task1a.rs  task1b.rs  task2a.rs  task2b.rs  task3.rs
src/tasks/io/: mod.rs
