[package]
name = "encounters"
version = "0.4.0"
authors = ["zmr462 <zmr462@usask.ca>", "cjd032 <dutchyn@cs.usask.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"


[[bin]]
name = "task1a"
path = "src/tasks/task1a.rs"

[[bin]]
name = "task1b"
path = "src/tasks/task1b.rs"

[[bin]]
name = "task2a"
path = "src/tasks/task2a.rs"

[[bin]]
name = "task2b"
path = "src/tasks/task2b.rs"

[[bin]]
name = "task3"
path = "src/tasks/task3.rs"